Bug 137898 - Page count is not reset to 1 in the print preview dialog
Summary: Page count is not reset to 1 in the print preview dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Print-Dialog
  Show dependency treegraph
 
Reported: 2020-10-31 13:49 UTC by Cajetan Bouchard
Modified: 2020-11-17 16:12 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Print Dialog final result (48.64 KB, image/png)
2020-10-31 13:52 UTC, Cajetan Bouchard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cajetan Bouchard 2020-10-31 13:49:02 UTC
Description:
The page count at the bottom left of the print dialog (the number inside the textbox) is not reset to 1 after changing the page range.

I was able to reproduce this bug in Writer and Calc, both on Windows and Linux operating systems.

Steps to Reproduce:
1. Create a document/spredsheet that will produce multiple pages. (Will use 4 for this example)
2. Open the print dialog (File -> Print...) or (Ctrl + p)
3. In the bottom left corner of the print dialog, use the arrows to navigate to the last page (i.e. 4)
4. In the right column of the print dialog, select the "Pages" radio button under the Range and Copies section.
4.1. (By default there is only one number in the corresponding textbox)
5. Notice that the textbox in the bottom left corner of the print dialog still displays the previous page number (i.e. 4). You are currently seeing "Preview 4 / 1"

Extra
6. Changing the "Pages" range to include more pages (i.e. 1,3)
7. Notice that the textbox in the bottom left corner of the print dialog still displays the previous page number (i.e. 4). You are currently seeing "Preview 4 / 2"

Actual Results:
In a 4 pages document, the back arrows are greyed out so it's not possible to go to previous pages using the arrows (the user thinks it's on the 4th page). Notice that the page previous does display the first page that is present in the page range

Expected Results:
Since the left buttons are greyed out, the number present in the textbox should display the number 1 as it's displaying the first page (in the pages range) in the preview window


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.3.1 (also reproduced on 7.0.1.2)
Environment: CPU threads: 8; OS: Linux 5.6 (also reproduced on CPU threads: 4; OS: Windows)
User Interface: UI render: default; VCL gtk3
Locale: en-CA (en_CA.UTF-8); UI: en-US
Misc: Calc: threaded
Comment 1 Cajetan Bouchard 2020-10-31 13:52:20 UTC
Created attachment 166894 [details]
Print Dialog final result
Comment 2 Timur 2020-11-16 07:18:58 UTC
Repro 7.1+. Seems regression from 6.4. OK in 6.3.
Comment 3 Timur 2020-11-16 07:48:46 UTC
commit 6186d38e950017e0347aabbbc1438a5cdfe8037d
Date:   Thu Oct 3 03:26:16 2019 +0200
    source bab77fcf8b80594fb49561254dfbaea381da8934
    previous source 21c00be1677638fc18e30425658ac7c1a6fe541c

author	Caolán McNamara <caolanm@redhat.com>	2019-10-01 10:20:29 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-10-02 20:28:28 +0200
commit bab77fcf8b80594fb49561254dfbaea381da8934 (patch)
tree be5deb3285355ea8df73f4eb10f0a83a889754e0
parent 21c00be1677638fc18e30425658ac7c1a6fe541c (diff)
weld PrintDialog

Hi Caolán. Please see this if you can.
Comment 4 Commit Notification 2020-11-16 12:42:56 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dbbb5569b45ede85af7f2ee53496f28762cbf371

tdf#137898 Page count is not reset to 1 in the print preview dialog

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2020-11-16 12:43:34 UTC
fixed in master, backport to 7-0 in gerrit
Comment 6 Commit Notification 2020-11-17 16:12:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/19d81a0923f0ffb106ae59aaf54659451fe271cc

tdf#137898 Page count is not reset to 1 in the print preview dialog

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.