tdf#137898 Page count is not reset to 1 in the print preview dialog

Change-Id: Ib7c8695fd3e7156b86f4b4603fbaa5e2319cdc1e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105919
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>